syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";

package signaling;

service SignalingService {
  rpc SendMessage (MessageRequest) returns (MessageResponse) {}
  rpc ReceiveMessages (Empty) returns (stream MessageResponse) {}
}

message MessageRequest {
  string content = 1;
}

message MessageResponse {
  string content = 1;
}

message Empty {}

